test/src/e2e_vm_tests/test_programs/should_fail/numerics_u32_overflow/src/main.sw
script;

fn main() {
 let mut a0 = 4294967295; //2^32-1
 let _x0: u32 = a0;

 let mut a1 = 4294967296; //2^32
 let _x1: u32 = a1;
}